reuters_info.txt
>>> xtrain[0]
[1, 2, 2, 8, 43, 10, 2, 5, 25, 2, 2, 5, 2, 2, 16, 2, 2, 90, 67, 7, 89, 5, 19, 2, 6, 19, 2, 15, 90, 67, 84, 22, 2, 26, 7, 48, 4, 49, 8, 2, 39, 2, 2, 
6, 2, 6, 83, 11, 15, 22, 2, 11, 15, 7, 48, 9, 2, 2, 2, 6, 2, 6, 2, 11, 15, 22, 2, 44, 11, 15, 16, 8, 2, 2, 90, 67, 52, 29, 2, 30, 32, 2, 6, 2, 15, 1
7, 12]                                                                                                                                             
>>> len(xtrain[0])
87
>>> ytrain[0]
3
>>> from keras.preprocessing.text import Tokenizer
>>> 
>>> from keras.preprocessing.text import Tokenizer
>>> 
>>> X_train = tokenizer.sequences_to_matrix(xtrain, mode='binary')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'tokenizer' is not defined
>>> , 2, 61, 11, 15, 58, 19, 2, 15, 53, 2, 39, 2, 2, 2, 53, 46, 22, 2, 2, 2, 2, 9, 2, 2, 5, 2, 65, 9, 2, 2, 2, 2, 47, 11, 2, 2, 61, 59, 20, 22, 10, 
29,                                                                                                                                                
  File "<stdin>", line 1
    , 2, 61, 11, 15, 58, 19, 2, 15, 53, 2, 39, 2, 2, 2, 53, 46, 22, 2, 2, 2, 2, 9, 2, 2, 5, 2, 65, 9, 2, 2, 2, 2, 47, 11, 2, 2, 61, 59, 20, 22, 10, 
29,                                                                                                                                                
    ^
SyntaxError: invalid syntax
>>> tokenizer = Tokenizer(nb_words=100)
>>> X_train = tokenizer.sequences_to_matrix(xtrain, mode='binary')
>>> X_train.shape
(7859, 100)
>>> X_train[0]
array([ 0.,  1.,  1.,  0.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,
        0.,  0.,  1.,  1.,  1.,  0.,  1.,  0.,  0.,  1.,  0.,  0.,  1.,
        1.,  0.,  0.,  1.,  1.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,
        1.,  0.,  0.,  0.,  1.,  1.,  0.,  0.,  0.,  1.,  1.,  0.,  0.,
        1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,
        0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,
        0.,  0.,  0.,  0.,  0.,  1.,  1.,  0.,  0.,  0.,  0.,  1.,  1.,
        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.])
>>> 
